# Planned-Obsolescence

./: .clang-format  .codacy.yml  .codeclimate.yml  .gitignore  .oclint  .travis.yml  CMakeLists.txt  Google Drive.url  README.md  Run Code Checker - Copy.bat  Run Code Checker.bat  Trello.url  bash.exe.stackdump  main.cpp
Art/: index.html  references.txt
CMake/: clang.format.cmake  datapak.cmake  githooks.cmake  itch.io.cmake
DOCS/: Trello.url
Data/: README.txt
Libs/: CMakeLists.txt
Libs/ASGE/include/Engine/: Colours.h  DebugPrinter.h  Doxygen.h  Game.h  Input.h  InputEvents.h  Keys.h  Mouse.h  Point2D.h  Sprite.h  SpriteBounds.h
Libs/ASGE/lib/linux/: libGLEW.a.REMOVED.git-id  libGameEngine.so.0.2.4  libGameEngined.a.REMOVED.git-id
Libs/ASGE/lib/osx/: libGLEWd.a.REMOVED.git-id  libGameEngine.0.2.4.dylib  libGameEngine.0.2.4.dylib.REMOVED.git-id  libGameEngined.0.2.4.dylib  libGameEngined.0.2.4.dylib.REMOVED.git-id  libGameEngined.a.REMOVED.git-id
Libs/ASGE/lib/win/: libGameEngine.dll.a.REMOVED.git-id  libGameEngined.dll.a.REMOVED.git-id  libfreetyped.a.REMOVED.git-id  libglew32d.a.REMOVED.git-id
MapMaker/PO_Launcher/: Form1.cs  PO_Launcher.csproj
MapMaker/PO_MapMaker/: Compiler.cs  KeybindEditor.Designer.cs  KeybindEditor.cs  Landing.Designer.cs  Landing.cs  PO_MapMaker.csproj  RoomEditor.Designer.cs  RoomEditor.cs  RoomList.cs  TileEditor.Designer.cs  TileEditor.cs  TileList.Designer.cs  TileList.cs  TileSetEditor.Designer.cs
MapMaker/PO_MapMaker/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
PO_Tools/PO_Launcher/: Form1.Designer.cs  Form1.cs  PO_Launcher.csproj  PO_Launcher.sln  Program.cs  packages.config
PO_Tools/PO_Launcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PO_Tools/PO_MapMaker/: Compiler.Designer.cs  Compiler.cs  GameEditor.Designer.cs  GameEditor.cs  Landing.Designer.cs  Landing.cs  MapEditor.Designer.cs  MapEditor.cs  MapList.Designer.cs  MapList.cs  PO_MapMaker.csproj  PO_MapMaker.sln  Program.cs  RoomEditor.cs  RoomList.Designer.cs  RoomList.cs  TileEditor.Designer.cs  TileEditor.cs  TileSetEditor.Designer.cs  TileSetEditor.cs
PO_Tools/PO_MapMaker/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Source/: Constants.cpp  Constants.h  Entity.h  GameObject.cpp  GameObject.h  Geometry.cpp  MyGame.cpp  MyGame.h  PlannedObsolescence.cpp  PlannedObsolescence.h  Scene.h  SceneManager.cpp  TitleScene.cpp  TitleScene.h
Source/Characters/: Boss.cpp  Boss.h  Character.cpp  Character.h  CharacterData.h  Characters.cpp  Characters.h  Goon.cpp  Goon.h  LabTechnician.cpp  LabTechnician.h  Security.cpp  Security.h
Source/Characters/Pathfinding/: NodeConnection.h  PathNode.h  PathfindingMap.cpp  PathfindingMap.h
Source/ConfigParsers/: CharacterData.h  MapData.h  RoomData.h  SimpleVector.h  TileData.h
Source/Core/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  CharacterManager.cpp  CharacterManager.h  ClickArea.cpp  ClickArea.h  DebugText.cpp  DebugText.h  DynamicSprite.cpp  DynamicSprite.h  FileHandler.cpp  FileHandler.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  Keybinds.cpp  Keybinds.h  LabMap.h  MapNode.h  NodeConnection.h  Observer.h  PathNode.h  PathfindingMap.cpp  PathfindingMap.h  Point.cpp  Point.h  Scene.h  SceneManager.cpp  SceneManager.h  Subject.cpp  Subject.h  Vector.cpp  Vector.h
Source/Debug/: DebugText.cpp
Source/EventSystem/: Entity.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
Source/FileHandler/: FileHandler.cpp  FileHandler.h
Source/Gauges/: UniversalGauge.cpp  UniversalGauge.h
Source/Keybinds/: Keybinds.h
Source/Managers/: CharacterManager.cpp  CharacterManager.h  GaugeManager.cpp  GaugeManager.h  Gauges.cpp  Gauges.h  SceneManager.cpp  SceneManager.h  UIManager.cpp  UIManager.h
Source/Map/: GameMap.cpp  GameMap.h  Room.cpp  Room.h  Tile.cpp  Tile.h
Source/Math/: Point.cpp  Point.h  Vector.cpp  Vector.h
Source/Scenes/: GameCore.cpp  GameCore.h  GameOver.cpp  GameOver.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  Scene.h  Splashscreen.cpp  Splashscreen.h  TitleScene.cpp  TitleScene.h  TutorialCore.cpp  TutorialCore.h  TutorialMenu.cpp  TutorialMenu.h
Source/Sprites/: ScaledSpriteArray.cpp  ScaledSpriteArray.h
Source/UI/: ActiveSelectionHighlight.cpp  ActiveSelectionHighlight.h  Button.cpp  Button.h  CharacterInfoPopup.cpp  CharacterInfoPopup.h  Cursor.cpp  Cursor.h  GenericUI.cpp  GenericUI.h  GetLocalisedString.cpp  GetLocalisedString.h  HudGaugeData.h  InteractionPopup.cpp  InteractionPopup.h  MainHUD.cpp  MainHUD.h  Menu.cpp  Menu.h  PopupWindow.cpp  PopupWindow.h  ProgressBar.cpp  ProgressBar.h  TextBox.cpp  TextBox.h  UI.cpp  UI.h  WorldInteractionPopup.cpp  WorldInteractionPopup.h
Source/Viewport/: Camera.cpp  Camera.h  ClickArea.cpp  ClickArea.h
Tools/: README.md  main.cpp
Tools/7zip/win/: 7za.exe.REMOVED.git-id
Tools/CMake/: astyle.cmake  clang.format.cmake
Tools/Clang-format/: git-clang-format
Tools/Clang-format/win/: clang-format.exe.REMOVED.git-id
Tools/Cppcheck/: suppress.conf
Tools/Libs/ASGE/include/Engine/: DebugPrinter.h  FileIO.h  Font.h  GameTime.h  Gamepad.h  NonCopyable.h  OGLGame.h  Renderer.h  Texture.h
Tools/Libs/ASGE/lib/linux/: libGLEWd.a.REMOVED.git-id  libGameEngine.so.0.2.4.REMOVED.git-id  libGameEngined.so.0.2.4.REMOVED.git-id  libfreetyped.a.REMOVED.git-id
Tools/Libs/ASGE/lib/osx/: libfreetyped.a.REMOVED.git-id
Tools/Libs/ASGE/lib/win/: libGameEngined.a.REMOVED.git-id
Tools/Source/: MyGame.h
Tools/itch.io/osx/: butler.REMOVED.git-id
Tools/itch.io/win/: 7z.dll.REMOVED.git-id  butler.exe.REMOVED.git-id
data/: compiler_log.txt  config.xml
data/CONFIGS/: READ ME FIRST.txt  characters_core.json  game_core.json  map_core.json  rooms_core.json  tiles_core.json  ui_localised.json
